Fix bottom padding on mobile.

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -21,5 +21,7 @@
     left: 0;
     right: 0;
     margin: 0;
+    padding: 0;
+    padding-bottom: 0.5rem;
   }
 }
